# swissK_agent

./: Cargo.toml  README.md  default.chat.json
src/: agent.rs  app.rs  main.rs  main.rs.0  ollama.rs  shortcuts.rs  ui.rs  utils.rs
