[package]
name = "ollama-tui-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.28"
crossterm = "0.27"
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
meval = "0.2"
actix-web = "4"  # For webhook server
clap = { version = "4", features = ["derive"] }  # For command-line args
# Optional: tokio for async: tokio = { version = "1", features = ["full"] }
